--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ text-decoration: none;
 }
 
 .top-container {
-  background-color: #c5ded7;
+  background-color: #e0ebe8;
   position: relative;
   padding-top: 100px;
 }
